// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preset file trees > a2a generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/a2a/ask.ts",
  "src/a2a/server.ts",
  "src/agents/assistant.ts",
  "src/auth.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/lifecycle.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/a2a.test.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > api-server generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/auth.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/lifecycle.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > assistant generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "evals/assistant.eval.ts",
  "evals/assistant.jsonl",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/harness/facts.ts",
  "src/harness/scheduler.ts",
  "src/harness/workspace.ts",
  "src/index.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/evals.test.ts",
  "tests/harness.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > basic generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > channels generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/gateway.ts",
  "src/index.ts",
  "src/lifecycle.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > durable-workflow generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/agents/researcher.ts",
  "src/agents/writer.ts",
  "src/approve.ts",
  "src/cogitator.ts",
  "src/durable.ts",
  "src/env.ts",
  "src/index.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "src/workflows/publish.ts",
  "src/workflows/report.ts",
  "tests/assistant.test.ts",
  "tests/fixtures/start-publish.ts",
  "tests/helpers.ts",
  "tests/publish.test.ts",
  "tests/report.test.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > evals generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "evals/assistant.eval.ts",
  "evals/assistant.jsonl",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/evals.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > hono generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/auth.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/lifecycle.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > mcp generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/mcp/client.ts",
  "src/mcp/notes-server.ts",
  "src/mcp/serve.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/mcp.test.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > memory generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > nextjs generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "next.config.ts",
  "package.json",
  "pnpm-workspace.yaml",
  "postcss.config.mjs",
  "README.md",
  "src/agents/assistant.ts",
  "src/app/api/chat/resume/route.ts",
  "src/app/api/chat/route.ts",
  "src/app/api/health/route.ts",
  "src/app/api/threads/[id]/route.ts",
  "src/app/globals.css",
  "src/app/layout.tsx",
  "src/app/page.tsx",
  "src/cogitator.ts",
  "src/components/chat.tsx",
  "src/components/message.tsx",
  "src/components/threads.tsx",
  "src/env.ts",
  "src/lib/session.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "src/tools/save-note.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > rag generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "docs/handbook.md",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/rag/ingest.ts",
  "src/rag/knowledge-base.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/rag.test.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > swarm generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/agents/researcher.ts",
  "src/agents/reviewer.ts",
  "src/agents/writer.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/swarms/team.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/team.test.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > tetsu generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "README.md",
  "src/agents/assistant.ts",
  "src/auth.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/lifecycle.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > voice-realtime generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "public/index.html",
  "README.md",
  "src/agents/assistant.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/lifecycle.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "src/voice/tools.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/tools.test.ts",
  "tests/voice.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`preset file trees > workflow generates the expected files 1`] = `
[
  ".env.example",
  ".github/workflows/ci.yml",
  ".gitignore",
  "AGENTS.md",
  "biome.json",
  "CLAUDE.md",
  "cogitator.yml",
  "package.json",
  "pnpm-workspace.yaml",
  "README.md",
  "src/agents/assistant.ts",
  "src/agents/researcher.ts",
  "src/agents/writer.ts",
  "src/cogitator.ts",
  "src/env.ts",
  "src/index.ts",
  "src/tools/calculator.ts",
  "src/tools/current-time.ts",
  "src/tools/fetch-url.ts",
  "src/tools/index.ts",
  "src/workflows/report.ts",
  "tests/assistant.test.ts",
  "tests/helpers.ts",
  "tests/report.test.ts",
  "tests/tools.test.ts",
  "tsconfig.build.json",
  "tsconfig.json",
  "vitest.config.ts",
]
`;
